--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@ body {
   border-radius: 25px 25px 0px 0px;
   position: absolute;
   left: 5%;
-  bottom: 12%;
+  bottom: 80px;
   font-family: "Roboto", sans-serif;
 }
 
@@ -54,12 +54,14 @@ body {
 
 .lower {
   color: white;
+  background-color: rgba(0, 0, 0, 0.5);
   height: 10%;
   width: 70%;
   border-radius: 0px 25px 25px 25px;
   position: absolute;
   left: 5%;
   bottom: 2%;
+  padding-bottom: 10px;
   font-family: "Roboto", sans-serif;
 }
 
